--- a/package.json
+++ b/package.json
@@ -13,34 +13,22 @@
     "@ant-design/cssinjs": "^1.18.4",
     "@ant-design/icons": "^5.3.0",
     "@ant-design/nextjs-registry": "^1.0.0",
-    "@aximario/json-tree": "^2.2.4",
-    "@mdx-js/loader": "^3.0.1",
-    "@mdx-js/react": "^3.0.1",
     "@monaco-editor/react": "^4.6.0",
-    "@next/mdx": "^14.1.3",
-    "@realsee/five": "^5.0.0-alpha.138",
-    "@types/mdx": "^2.0.11",
     "antd": "^5.13.3",
-    "antd-img-crop": "^4.21.0",
     "axios": "^0.21.4",
     "js-base64": "^3.7.7",
     "js-cookie": "^3.0.1",
     "js-export-excel": "^1.1.4",
     "jsoneditor": "^9.5.5",
     "lodash": "^4.17.21",
-    "moment": "^2.29.1",
     "next": "^14.1.3",
-    "query-string": "^6.13.8",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
-    "react-json-view": "^1.20.4",
-    "three": "^0.117.1",
-    "xlsx": "^0.18.5"
+    "react-json-view": "^1.20.4"
   },
   "devDependencies": {
     "dayjs": "^1.11.3",
-    "echarts": "^5.4.2",
-    "typescript": "5.4.2"
+    "echarts": "^5.4.2"
   }
 }
