--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@ant-design/cssinjs": "^1.18.4",
     "@ant-design/icons": "^5.3.0",
     "@ant-design/nextjs-registry": "^1.0.0",
-    "@monaco-editor/react": "^4.6.0",
+    "@codemirror/lang-javascript": "^6.2.2",
+    "@uiw/codemirror-theme-dracula": "^4.22.0",
+    "@uiw/react-codemirror": "^4.22.0",
     "antd": "^5.13.3",
     "axios": "^0.21.4",
     "js-base64": "^3.7.7",
@@ -25,7 +27,8 @@
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
-    "react-json-view": "^1.20.4"
+    "react-json-view": "^1.20.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "dayjs": "^1.11.3",
